<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">iPlant</string>

    <!--On Boarding-->
    <string name="title_page_1">Identify Disease on\nthe go, Anytime</string>
    <string name="desc_page_1">Growth in Every Pixels : Revolutionizing Disease\nDetection for Smarter Conservation</string>
    <string name="title_page_2">Your Pocket-Sized\nPlant Encyclopedia</string>
    <string name="desc_page_2">Empower Your Plant Journey: The Handy\nPocket-Sized Encyclopedia</string>
    <string name="title_page_3">Window Into Plant\nWonder</string>
    <string name="desc_page_3">Unlocking Plant Magic: Peering\nthrough the Window of Wonder.</string>
    <string name="title_page_4">Nurturing Nature\'s\nSecrets</string>
    <string name="desc_page_4">Nurturing Change: Reshaping Disease\nDetection for Smarter Conservation</string>

    <!--Login Activity-->
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="lets_login">Let\'s sign you in.</string>
    <string name="welcome">Welcome.</string>
    <string name="welcome_desc">Please login to explore using\nour app.</string>
    <string name="welcome_desc2">Continue your disease detection journey\nby signing in to your account</string>
    <string name="email_cannot_empty">Email cannot be empty</string>
    <string name="valid_email">Your Email is not valid!</string>
    <string name="email_hint">Enter Your Email</string>
    <string name="password_hint">Enter Your Password</string>
    <string name="move_to_register">I don\'t have an account, </string>
    <string name="signup">Sign Up</string>
    <string name="password_minimum">Password must consist 8 characters</string>

    <!--Register Activity-->
    <string name="name">Name</string>
    <string name="name_hint">Enter Your Name</string>
    <string name="move_to_login">I already have an account, </string>
    <string name="login">Login With Google</string>

    <!--Dashboard Fragment -->
    <string name="user">User</string>
    <string name="hello">Hello, </string>
    <string name="desc_hello">👋 Good to see you again!</string>
    <string name="desc_hello2">Take care your <b>potato plant</b></string>
    <string name="title_info_potato">Important!</string>
    <string name="desc_info_potato">This app is still under development,\nso it can only scan <b>potato plants.</b></string>

    <!--Bottom Navigation -->
    <string name="home">Home</string>
    <string name="article">Article</string>
    <string name="profile">Profile</string>

    <!--Article Fragment -->
    <string name="image">Picture</string>
    <string name="placeholder_title">Title</string>
    <string name="placeholder_desc">This is Description of Article</string>

    <!--Dashboard Fragment -->
    <string name="text_photo">Heal your plant now!</string>
    <string name="text_article">Watch This Article</string>
    <string name="see_article">See All Article</string>
    <string name="camera">Take Picture</string>
    <string name="take_picture">Take \nPicture</string>
    <string name="diagnostic">Diagnostic</string>
    <string name="see_result">See the \nResult</string>

    <!--Profile Fragment -->
    <string name="email_display">user@iplant.com</string>
    <string name="setting">Settings</string>
    <string name="enable_darkmode">Enable Dark Theme</string>
    <string name="desc_enable_darkmode">Toggle to adjust dark or light mode</string>
    <string name="change_language">Change Language</string>
    <string name="desc_change_language">CLick Here to Change Language</string>
    <string name="alert_logout">Alert</string>
    <string name="logout">Logout Now</string>
    <string name="not_logout">No</string>
    <string name="dialog_logout">Are you sure want to Logout?</string>

    <!--Camera Activity -->
    <string name="start_capture_now">Start Capture Now</string>

    <!--Result Activity -->
    <string name="result">Result</string>
    <string name="disease">Disease Name</string>
    <string name="desc_result">Click this disease to get more detail</string>
    <string name="recomendation">The recomendation will display here. Medicine or Something</string>
    <string name="title_recomendation">Medicine Recomendations</string>
    <string name="predict">Predict</string>
    <string name="healthy">This leaf is healthy, no need Medicine</string>
    <string name="your_leaf">This leaf is </string>
    <string name="info_result">As a reminder, the diagnosis in this application is only an initial diagnosis. You can follow the advice above but please note that if the disease is too severe it would be better to consult an expert directly.</string>
    <string name="marks_early">Potato leaf disease dry spot (early blight) has initial symptoms with dry spots on the lower leaves, brown in color in the form of a typical circular mark centered (like a ring) on the spot, sporulation does not appear like white dew. Dry spot disease (alternaria solani) is a disease of potatoes caused by the fungus Alternaria Solani.</string>
    <string name="marks_late">One of the major diseases affecting potatoes is late blight,` caused by the pathogen Phytopthora infestans (Mont.) de Bary; Order Pythiales; Family Pythiaceae. The host range of the pathogen P. infestans includes tomato, potato, bell pepper, eggplant, chili and other solanaceae families. Many stages of the P. infestans life cycle can only be seen under a microscope. Fine threads (mycelium) can be easily observed with a microscope, these threads are characterized by the presence of plasma flow in the cells. The mycelium develops between the cells and cell ends of the hypa thread and is dichotomous. Mycelia propagate on the surface of pure media.</string>

    <!--Info Dialog Camera -->
    <string name="info">How to Use</string>
    <string name="one">1. </string>
    <string name="two">2. </string>
    <string name="three">3. </string>
    <string name="four">4. </string>
    <string name="warning">Warning : </string>
    <string name="info_one">Before taking a photo, make sure the light is bright</string>
    <string name="info_two">Make sure the object to be scanned right inside the camera</string>
    <string name="info_three">Wait until the process of diagnostic finish</string>
    <string name="info_four">See the result of image that you capture and implement the tips that display on your screen</string>
    <string name="info_warning">If you have problem with your back camera, try with your front camera</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_shop">ShopActivity</string>

    <!--Shop Activity -->
    <string name="required_price">Rp %d</string>
    <string name="menu_home">Home</string>
    <string name="menu_cart">Cart</string>
    <string name="back">Back</string>
    <string name="title_shop1">Plant Medicine</string>
    <string name="title_shop2">Health Solution</string>
    <string name="desc_shop1">Identify a medication that can provide relief and promote the plants well-being!</string>
    <string name="desc_shop2">Find a medicinal solution to combat the plants illness and promote its growth!</string>
    <string name="shop">Shop</string>
    <string name="add_to_cart">Add to My Cart Now : Rp %d</string>
    <string name="total_order">Your order total is Rp %d</string>
    <string name="lorem_ipsum">%s</string>

    <!--Media Activity-->
    <string name="choose_camera">Choose Your Camera</string>
    <string name="desc_choose_camera">You can choose camera default on your phone\nor use iPlant camera</string>
    <string name="default_camera">Use Default\nCamera</string>
    <string name="iplant_camera">Use iPlant\nCamera</string>
</resources>